# cookiecutter-hipster-pypackage

./: README.md  cookiecutter.json
{{cookiecutter.dist_name}}/: MANIFEST.in  README.md  meta.yaml  mypy.ini  pylama.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
{{cookiecutter.dist_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.dist_name}}/src/{{cookiecutter.package_name}}/: __init__.py  _version.py  index.rst
