[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "{{cookiecutter.package_name}}"
dist-name = "{{cookiecutter.dist_name}}"
author = "{{cookiecutter.full_name}}"
author-email = "{{cookiecutter.email}}"
home-page = "{{cookiecutter.repository_url}}"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]
description-file = "README.md"
requires-python = ">=3.7"
requires = [
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest"
]
doc = [
    "sphinx"
]
dev = [
    "dunamai",
    "mypy",
]

[tool.black]
line-length = 79


[tool.flit.metadata.urls]
Documentation = "{{cookiecutter.docs_url}}"

[tools.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79