[build-system]
requires = ["setuptools>=34.4", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[metadata]
name = {{cookiecutter.project_name}}
description = {{cookiecutter.project_short_description}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}

[tool.black]
line-length = 79

[tools.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79